tests/snapshot/snapshots/snapshot__storage__bucket_with_iam_config.snap
---
source: tests/snapshot/storage.rs
expression: bucket
---
{
  "iamConfiguration": {
    "publicAccessPrevention": "enforced"
  },
  "name": "iam-bucket"
}
