tests/snapshot/snapshots/snapshot__storage__buckets_fixture.snap
---
source: tests/snapshot/storage.rs
expression: "Buckets::fixture()"
---
{
  "kind": "test-kind",
  "nextPageToken": "test-next_page_token"
}
