tests/snapshot/snapshots/snapshot__storage__compose_request_with_sources.snap
---
source: tests/snapshot/storage.rs
expression: req
---
{
  "destination": {
    "contentType": "text/plain",
    "name": "combined.txt"
  },
  "sourceObjects": [
    {
      "name": "part1.txt"
    },
    {
      "name": "part2.txt"
    }
  ]
}
