tests/snapshot/snapshots/snapshot__storage__objects_fixture.snap
---
source: tests/snapshot/storage.rs
expression: "Objects::fixture()"
---
{
  "kind": "test-kind",
  "nextPageToken": "test-next_page_token"
}
