tests/snapshot/snapshots/snapshot__storage__policy_fixture.snap
---
source: tests/snapshot/storage.rs
expression: "Policy::fixture()"
---
{
  "etag": "test-etag",
  "kind": "test-kind",
  "resourceId": "test-resource_id",
  "version": 100
}
