tests/snapshot/snapshots/snapshot__storage__rewrite_response_in_progress.snap
---
source: tests/snapshot/storage.rs
expression: resp
---
{
  "done": false,
  "objectSize": "1000",
  "rewriteToken": "token-abc",
  "totalBytesRewritten": "500"
}
